--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jinja2>=3.1.2",
     "python-multipart>=0.0.6",
     "pydantic>=2.5.0",
+    "pydantic-settings>=2.0.0",
     "sqlalchemy>=2.0.23",
     "aiosqlite>=0.19.0",
 ]
@@ -26,7 +27,7 @@ dev = [
 ]
 
 [project.scripts]
-media-picker = "app:main"
+media-picker = "main:main"
 
 [build-system]
 requires = ["hatchling"]
