--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "sqlalchemy>=2.0.23",
     "aiosqlite>=0.19.0",
+    "httpx>=0.28.1",
+    "ruff>=0.12.12",
 ]
 
 [project.optional-dependencies]
@@ -215,3 +217,8 @@ module = [
     "jinja2.*",
 ]
 ignore_missing_imports = true
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.12",
+]
