--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Ruff Check CI
+name: CI
 
 on:
   push:
@@ -21,12 +21,12 @@ jobs:
           python-version: "3.11"
           
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
           
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --extra dev
         
       - name: Run Ruff linting
         uses: chartboost/ruff-action@v1
@@ -52,12 +52,12 @@ jobs:
           python-version: "3.11"
           
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
           
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --extra dev
         
       - name: Run tests
         run: uv run pytest tests/ -v --tb=short
@@ -84,12 +84,12 @@ jobs:
           python-version: "3.11"
           
       - name: Install uv
-        uses: actions/setup-uv@v3
+        uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
           
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --extra dev
         
       - name: Run mypy
         run: uv run mypy src/ --ignore-missing-imports --no-strict-optional
