Added unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,9 +161,10 @@ section-order = [
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-python_files = ["test_*.py"]
+python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+pythonpath = ["src"]
 addopts = "-v --tb=short --strict-markers"
 markers = [
     "slow: marks tests as slow",
